--- a/package.json
+++ b/package.json
@@ -1,15 +1,42 @@
 {
   "main": "lib/binding.js",
   "dependencies": {
-    "node-addon-api": "^1.1.0"
+    "node-addon-api": "^1.1.0",
+    "tap-spec": "^5.0.0",
+    "tape": "^5.2.2"
   },
   "scripts": {
-    "test": "node --napi-modules ./test/test_binding.js"
+    "test": "node --napi-modules ./test/test_binding.js | tap-spec",
+    "pretty": "prettier --write \"./**/*.{js,jsx,json,cpp,h}\"",
+    "rebuild": "node-gyp rebuild",
+    "rebuild-debug": "node-gyp --debug rebuild",
+    "build": "node-gyp build",
+    "build-debug": "node-gyp --debug build"
   },
   "gypfile": true,
   "name": "cpicp-module",
   "version": "1.0.0",
-  "description": "Rotinas para executar o CP-ICP",
+  "description": "Módulo Node.js para execução de sub-rotinas de processamento do algoritmo Cloud Partitioning for Iterative Closest Point (CP-ICP).",
   "author": "Daniel Araújo Chaves Souza",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [
+    "nodejs",
+    "javascript",
+    "point-cloud",
+    "node-module",
+    "partitioning",
+    "3d",
+    "pcd",
+    "cloud-register",
+    "pontu",
+    "cp-icp"
+  ],
+  "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
+  }
 }
